--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <section class="sections">
                     <section class="bloco" id="s_dados">
                         <div class="dados-texto">
-                            <p style="font-size: 4em">Ricardo Luiz Ribeiro da Glória</p>
+                            <p style="font-size: 300%">Ricardo Luiz Ribeiro da Glória</p>
                             <br />
                             <p>Endereço: Rua Octaciano Xavier de Castro, n° 243, Jardim Bica da Glória – Tremembé, SP.</p>
                             <p>Telefone/WhatsApp: (12)99112-3842</p>
