--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
                         <div class="dados-texto">
                             <p style="font-size: 300%">Ricardo Luiz Ribeiro da Glória</p>
                             <br />
-                            <p>Endereço: Rua Octaciano Xavier de Castro, n° 243, Jardim Bica da Glória – Tremembé, SP.</p>
+                            <p>Endereço: Rua Octaciano Xavier de Castro, n° 243, Jardim Bica da Glória</p> 
+                            <p> Tremembé, SP.</p>
                             <p>Telefone/WhatsApp: (12)99112-3842</p>
                             <p>E-mail: ricardo_h_hop@hotmail.com</p>
                             <p>Habilitação A/B.</p>
-                            <p>Objetivo: Integrar quadro de estagiários ou efetivo na área de Tecnologia da Informação.</p>
+                            <p>Objetivo: Quadro de estagiários ou efetivo na área de Tecnologia da Informação.</p>
                             <br />
                             <p >Formação acadêmica:</p>
                             <p>Instituto Federal de São Paulo (IFSP).</p>
@@ -41,11 +42,14 @@
                             <br />
                             <p>Corozita S/A.</p>
                             <p>Cargo: Operador de Tornos A.</p>
-                            <p>Atividades: Iniciado no setor como operador C, posteriormente atingindo nível hierárquico</p> 
-                            <p>de operador A, sendo responsável por preparação e controle de qualidade em maquinário para</p> 
-                            <p>usinagem, já tendo inclusive assumido posição de liderança durante as férias dos respectivos</p> 
-                            <p>líderes do setor</p>
+                            <p class="texto-experiencia">
+                                Atividades: Iniciado no setor como operador C, atingindo nível hierárquico de 
+                                operador A, sendo responsável por preparação e controle de qualidade em 
+                                maquinário para usinagem, já tendo inclusive assumido posição de liderança 
+                                durante as férias dos respectivos líderes do setor.
+                            </p>
                             <p>Período: De junho de 2013 até junho de 2018.</p>
+                            
                         </div>
                     </section>
                     <section class="bloco" id="s_outros">
