--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
                             <p>Frequentador de eventos na área da tecnologia.</p>
                             <br />
                             <ul class="icones-sociais">
-                                <li>
+                                <li class="icones">
                                     <a class="github" href="https://github.com/Ricgloria" target="_blank">
-                                        <img src="imagens\github.png" alt="github" width="50px" height="50px">
+                                        <img src="imagens\github.png" alt="github">
                                     </a>
                                 </li>
-                                <li>
+                                <li class="icones">
                                     <a class="linkedin" href="https://www.linkedin.com/in/ricardo-gloria-a4684b148/" target="_blank">
-                                        <img src="imagens\linkedin.png" alt="linkedin" width="50px" height="50px">
+                                        <img src="imagens\linkedin.png" alt="linkedin">
                                     </a>
                                 </li>
                             </ul>
