--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel="shortcut icon" href="imagens/icon-livro.png">
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/curriculo.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     </head>
     <body>
         <main>
@@ -79,12 +81,12 @@
                             <ul class="icones-sociais">
                                 <li class="icones">
                                     <a class="github" href="https://github.com/Ricgloria" target="_blank">
-                                        <img src="imagens\github.png" alt="github">
+                                        <i class="fab fa-github"></i>
                                     </a>
-                                </li>
+                                </li>                                
                                 <li class="icones">
                                     <a class="linkedin" href="https://www.linkedin.com/in/ricardo-gloria-a4684b148/" target="_blank">
-                                        <img src="imagens\linkedin.png" alt="linkedin">
+                                        <i class="fab fa-linkedin"></i>
                                     </a>
                                 </li>
                             </ul>
