--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav class="navegacao">
                 <label for="dados">Dados</label>
                 <label for="experiencias">Experiências</label>
-                <label for="outros">Outras Informações</label>
+                <label for="outros">Informações</label>
             </nav>
             <div class="scroll">
                 <input type="radio" name="grupo" id="dados" checked="true">
@@ -25,10 +25,9 @@
                         <div class="dados-texto">
                             <p style="font-size: 300%">Ricardo Luiz Ribeiro da Glória</p>
                             <br />
-                            <p>Endereço: Rua Octaciano Xavier de Castro, n° 243, Jardim Bica da Glória</p> 
-                            <p> Tremembé, SP.</p>
-                            <p>Telefone/WhatsApp: (12)99112-3842</p>
-                            <p>E-mail: ricardo_h_hop@hotmail.com</p>
+                            <p><i class="fas fa-map-marked-alt"></i> Rua Octaciano Xavier de Castro, Bica da Glória - Tremembé/SP.</p>
+                            <p><i class="fas fa-mobile-alt"></i><i class="fab fa-whatsapp"></i> (12)99112-3842</p>
+                            <p><i class="fas fa-envelope-open-text"></i> ricardo_h_hop@hotmail.com</p>
                             <p>Habilitação A/B.</p>
                             <p>Objetivo: Quadro de estagiários ou efetivo na área de Tecnologia da Informação.</p>
                             <br />
@@ -81,7 +80,7 @@
                             <ul class="icones-sociais">
                                 <li class="icones">
                                     <a class="github" href="https://github.com/Ricgloria" target="_blank">
-                                        <i class="fab fa-github"></i>
+                                        <i class="fab fa-github-square"></i>
                                     </a>
                                 </li>                                
                                 <li class="icones">
@@ -96,7 +95,7 @@
             </div>    
         </main>
         <footer class="rodape">
-            &copy; Ricardo L. R. Gloria 2018
+            &copy; Ricardo L. R. Gloria 2019
         </footer>
     </body>    
 </html>
