--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <body>
         <main>
             <nav class="navegacao">
-                <label for="dados">Dados</label>
+                <label for="dados">Quem sou eu</label>
                 <label for="experiencias">Experiências</label>
-                <label for="outros">Informações</label>
+                <label for="outros">Mais de mim</label>
             </nav>
             <div class="scroll">
                 <input type="radio" name="grupo" id="dados" checked="true">
@@ -23,7 +23,10 @@
                 <section class="sections">
                     <section class="bloco" id="s_dados">
                         <div class="dados-texto">
-                            <p style="font-size: 300%">Ricardo Luiz Ribeiro da Glória</p>
+                            <div class="foto">
+                                <img class="foto-perfil" src="imagens/ric.jpg" alt="foto do ricardo">
+                            </div>
+                            <h1>Ricardo Luiz Ribeiro da Glória</h1>
                             <br />
                             <p><i class="fas fa-map-marked-alt"></i> Rua Octaciano Xavier de Castro, Bica da Glória - Tremembé/SP.</p>
                             <p><i class="fas fa-mobile-alt"></i><i class="fab fa-whatsapp"></i> (12)99112-3842</p>
@@ -31,9 +34,8 @@
                             <p>Habilitação A/B.</p>
                             <p>Objetivo: Quadro de estagiários ou efetivo na área de Tecnologia da Informação.</p>
                             <br />
-                            <p >Formação acadêmica:</p>
-                            <p>Instituto Federal de São Paulo (IFSP).</p>
-                            <p>Curso: Tecnologia em Análise e Desenvolvimento de Sistemas.</p>
+                            <p><i class="fas fa-university"></i> Instituto Federal de São Paulo (IFSP).</p>
+                            <p><i class="fas fa-graduation-cap"></i> Tecnologia em Análise e Desenvolvimento de Sistemas.</p>
                             <p>Previsão de conclusão: Dezembro de 2020.</p>
                         </div>        
                     </section>
