--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                             <br />
                             <ul class="icones-sociais">
                                 <li class="icones">
-                                    <a class="github" href="https://github.com/Ricgloria" target="_blank">
+                                    <a class="github" href="https://github.com/Ricgloria" target="_blank" rel="noopener">
                                         <i class="fab fa-github-square"></i>
                                     </a>
                                 </li>                                
                                 <li class="icones">
-                                    <a class="linkedin" href="https://www.linkedin.com/in/ricardo-gloria-a4684b148/" target="_blank">
+                                    <a class="linkedin" href="https://www.linkedin.com/in/ricardo-gloria-a4684b148/" target="_blank" rel="noopener">
                                         <i class="fab fa-linkedin"></i>
                                     </a>
                                 </li>
