--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
         <title>Ricardo Luiz Ribeiro da Gloria</title>
         <link rel="shortcut icon" href="imagens/icon-livro.png">
         <link rel="stylesheet" href="css/reset.css">
